# diffusion-uncertainty

./: pyproject.toml  readme.md
config/generation/: cifar10_3000_samples_threshold.yaml  cifar10_5000_samples_threshold.yaml  imagenet128_3000_samples_threshold.yaml  imagenet256_1000_samples.yaml  imagenet256_3000_samples_threshold.yaml  imagenet512_3000_samples_threshold.yaml  imagenet64_3000_samples_threshold.yaml
config/guidance/: cifar10_0_95.yaml  imagenet128_0_95.yaml  imagenet256_0_95.yaml  imagenet512_0_95.yaml  imagenet64_0_85.yaml  imagenet64_0_90.yaml  imagenet64_0_95.yaml  imagenet64_0_99.yaml
config/precision_recall_generated/: imagenet64.yaml
config/precision_recall_real/: imagenet64.yaml
config/stable_diffusion_guidance/: base.yaml
config/threshold/: cifar10_0_95.yaml  cifar10_0_99.yaml  imagenet128_0_95.yaml  imagenet128_0_99.yaml  imagenet256_0_95.yaml  imagenet256_0_99.yaml  imagenet512_0_95.yaml  imagenet512_0_99.yaml  imagenet64.yaml  imagenet64_0_95.yaml  imagenet64_0_99.yaml
config/uncertainty_threshold/: imagenet64.yaml
diffusion_uncertainty/: argparse.py  ddpm_finetune_noise.py  fid.py  fid_bayesdiff.py  gaussian_diffusion.py  generate_samples.py  init_model.py  init_model.pyi  lsun_churches256.py  paths.py  score_uncertainty_model.py  uncertainty_guidance.py  utils.py  utils_experiments.py
diffusion_uncertainty/dataset/: cifar10.py  imagenet.py
diffusion_uncertainty/guided_diffusion/: fp16_util.py  gaussian_diffusion.py  unet_openai.py
diffusion_uncertainty/intrinsic_lora/: inference_sd_single.py
diffusion_uncertainty/metrics/: ause.py  ause.pyi  denoising_diffusion_pytorch.py  nll.py  precision_recall.py  precision_recall_pytorch.py
diffusion_uncertainty/pipeline_uncertainty/: pipeline_flux_uncertainty.py  pipeline_sampler_class_conditional.py  pipeline_sampler_class_conditional_uncertainty.py  pipeline_sampler_class_conditional_uncertainty.pyi  pipeline_sampler_class_conditional_uncertainty_guided_gradient.py  pipeline_sampler_class_conditional_uncertainty_guided_posterior_distribution.py  pipeline_sampler_class_conditional_uncertainty_guided_second_order.py  pipeline_stable_diffusion_3_uncertainty_guided.py  pipeline_stable_diffusion_uncertainty_guided.py  uncertainty_guidance.py
diffusion_uncertainty/schedulers_uncertainty/: get_uncertainty_scheduler.py  mixin.py  scheduling_ddim_flip.py  scheduling_ddim_flip_grad.py  scheduling_ddim_flip_threshold.py  scheduling_ddim_infer_noise.py  scheduling_ddim_infer_noise_multiscale_threshold.py  scheduling_ddim_mc_dropout.py  scheduling_ddim_mc_dropout_gradient.py  scheduling_ddim_model_gradient_guided.py  scheduling_ddim_score_uncertainty_model_gradient.py  scheduling_ddim_uncertainty.py  scheduling_ddim_uncertainty_centered.py  scheduling_ddim_uncertainty_centered_d.py  scheduling_ddim_uncertainty_grad.py  scheduling_ddim_uncertainty_image.py  scheduling_ddim_uncertainty_threshold.py  scheduling_ddim_uncertainty_zigzag.py  scheduling_ddim_uncertainty_zigzag_centered.py  scheduling_dpm_2_uncertainty_centered.py  traits.py
diffusion_uncertainty/uvit/: load_pretrained_models.py  uvit.py  uvit_ae.py
docs/: index.html
scripts/: __init__.py  clean_empty_runs.py  compute_ause.py  compute_dataset_fid.py  compute_dataset_fid_imagenet64_npz.py  compute_dataset_fid_old.py  compute_fid_imagenet.py  compute_fid_imagenet128.py  compute_nll.py  compute_pr_generated_samples.py  compute_pr_true_dataset.py  compute_statistics_fid_score.py  compute_threshold_pixel_wise.py  download_imagenet.sh  eval_fid_lsun_churches256.py  generate_compute_fid_score_guided_diffusion_imagenet128.py  generate_dataset_score_uncertainty_cifar10.py  generate_dataset_score_uncertainty_imagenet.py  generate_dataset_score_uncertainty_imagenet_classifier_guidance.py  generate_diffusion_starting_data.py  generate_images_with_uncertainty_percentile.py  generate_images_with_uncertainty_threshold.py  generate_with_uncertainty_threshold_flux.py  generate_with_uncertainty_threshold_stable_diffusion.py  generate_with_uncertainty_threshold_stable_diffusion_3.py  measure_times_cifar10.py  measure_times_imagenet.py  plot_curve_M.py  summary_experiments.py  uncertainty_benchmark_imagenet.py
scripts/plot/: assemble_row_sd.py  make_grid_prompts_stable_diffusion.py  make_grid_prompts_stable_diffusion_pairs.py  make_grid_prompts_stable_diffusion_single_prompt.py  plot_denoising_schedule.py  plot_fid_score_curve.py  plot_precision_recall_curves.py  plot_uncertainty_schedule.py
tests/: test_generation_adm_imagenet.py  test_generation_uvit.py  test_imagenet_dataset.py  test_load_adm_imagenet.py
